be/test_out2.txt

> Configure project :
The 'sonarqube' task depends on compile tasks. This behavior is now deprecated and will be removed in version 5.x. To avoid implicit compilation, set property 'sonar.gradle.skipCompile' to 'true' and make sure your project is compiled, before analysis has started.
The 'sonar' task depends on compile tasks. This behavior is now deprecated and will be removed in version 5.x. To avoid implicit compilation, set property 'sonar.gradle.skipCompile' to 'true' and make sure your project is compiled, before analysis has started.

> Task :compileJava
C:\Users\SSAFY\Desktop\special\S14P21D105\be\src\main\java\com\ssafy\be\domain\user\entity\User.java:79: warning: @Builder will ignore the initializing expression entirely. If you want the initializing expression to serve as default, add @Builder.Default. If it is not supposed to be settable during building, make the field final.
    List<TradeReport> tradeReports = new ArrayList<>();
                      ^
C:\Users\SSAFY\Desktop\special\S14P21D105\be\src\main\java\com\ssafy\be\domain\stream\service\StreamService.java:331: error: local variables referenced from a lambda expression must be final or effectively final
                        .filter(stream -> followRepository.existsByUserAndSeller(loginUser, stream.getSeller()))
                                                                                 ^
C:\Users\SSAFY\Desktop\special\S14P21D105\be\src\main\java\com\ssafy\be\domain\stream\service\StreamService.java:384: error: local variables referenced from a lambda expression must be final or effectively final
                    .filter(stream -> followRepository.existsByUserAndSeller(loginUser, stream.getSeller()))
                                                                             ^
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
1 warning

> Task :compileJava FAILED

[Incubating] Problems report is available at: file:///C:/Users/SSAFY/Desktop/special/S14P21D105/be/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  C:\Users\SSAFY\Desktop\special\S14P21D105\be\src\main\java\com\ssafy\be\domain\stream\service\StreamService.java:331: error: local variables referenced from a lambda expression must be final or effectively final
                          .filter(stream -> followRepository.existsByUserAndSeller(loginUser, stream.getSeller()))
                                                                                   ^
  C:\Users\SSAFY\Desktop\special\S14P21D105\be\src\main\java\com\ssafy\be\domain\stream\service\StreamService.java:384: error: local variables referenced from a lambda expression must be final or effectively final
                      .filter(stream -> followRepository.existsByUserAndSeller(loginUser, stream.getSeller()))
                                                                               ^
  C:\Users\SSAFY\Desktop\special\S14P21D105\be\src\main\java\com\ssafy\be\domain\user\entity\User.java:79: warning: @Builder will ignore the initializing expression entirely. If you want the initializing expression to serve as default, add @Builder.Default. If it is not supposed to be settable during building, make the field final.
      List<TradeReport> tradeReports = new ArrayList<>();
                        ^

  Note: Recompile with -Xlint:unchecked for details.
Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

  Note: Some input files use unchecked or unsafe operations.
  2 errors
  1 warning

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.
You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.14.4/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 5s
1 actionable task: 1 executed
